--- a/static/css/style.css
+++ b/static/css/style.css
@@ -188,3 +188,74 @@ border : 1px solid #345411;
 padding : 5px;
 margin-left : 15px;
 }
+.style1 {
+	font-size: small;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+}
+.style2 {font-family: Verdana, Arial, Helvetica, sans-serif}
+.style3 {font-size: small}
+.style5 {font-size: 85%; font-weight: bold; color: #003300; font-family: Verdana, Arial, Helvetica, sans-serif; }
+.style8 {font-size: 24px}
+.style9 {font-size: 95%; font-weight: bold; color: #003300; font-family: Verdana, Arial, Helvetica, sans-serif; }
+.style12 {font-size: small; font-weight: bold; }
+.style13 {font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: small;
+	font-weight: bold;
+	color: #000000;
+}
+.style4 {font-size: small;
+	font-weight: bold;
+	color: #FFFFFF;
+}
+.style5 {color: #FFFFFF}
+.style6 {color: #000000}
+-->
+</style>
+ <style type="text/css">
+
+.ds_box {
+	background-color:#336633;
+	border: 2px solid #666600;
+	position: absolute;
+	z-index: 32767;
+}
+
+.ds_tbl {
+	background-color: #FFF;
+	
+}
+
+.ds_head {
+	background-color: #85A157;
+	color: #FFF;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 13px;
+	font-weight: bold;
+	text-align: center;
+	letter-spacing: 2px;
+}
+
+.ds_subhead {
+	background-color: #85A157;
+	color: #000;
+	font-size: 12px;
+	font-weight: bold;
+	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	width: 32px;
+}
+
+.ds_cell {
+	background-color:#FFFFCC;
+	color: #000;
+	font-size: 13px;
+	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	padding: 5px;
+	cursor: pointer;
+	border: 1px solid #666600;
+}
+
+.ds_cell:hover {
+	background-color: #F3F3F3;
+} /* This hover code won't work for IE */
